# Project_Maker

./: .gitignore  AUTOMATION_GUIDE.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  LEARNING_PATHS.md  PROJECT_INDEX.md  PROJECT_TEMPLATE.md  README.md  WISHLIST.md  WISHLIST_V2.md  WISHLIST_V3.md  WISHLIST_V4.md  WISHLIST_V5.md  WISHLIST_V6.md  WISHLIST_V7.md  auto_runner.py  golang-go_2%3a1.22~2build1_arm64.deb  jest.config.js  libstdc++6_14.2.0-4ubuntu2~24.04.1_arm64.deb  run.sh  workflow.js
projects/3d-modeling-engine/: CMakeLists.txt  LEARNING_NOTES.md  README.md
projects/3d-modeling-engine/docs/: 01-RESEARCH.md  02-DESIGN.md  03-IMPLEMENTATION.md  04-TESTING.md  05-DEVELOPMENT.md
projects/3d-modeling-engine/examples/: demo_mesh.cpp  demo_transform.cpp
projects/3d-modeling-engine/src/: 3d_engine.cpp  main.cpp
projects/3d-modeling-engine/tests/: test_geometry.cpp  test_mesh.cpp  test_transform.cpp
projects/animation-engine/: LEARNING_NOTES.md  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
projects/animation-engine/docs/: 01-RESEARCH.md  01_RESEARCH.md  02-ARCHITECTURE.md  02_REQUIREMENTS.md  03-IMPLEMENTATION.md  03_DESIGN.md  04-TESTING.md  04_IMPLEMENTATION.md  05-DEVELOPMENT.md  05_DEVELOPMENT.md
projects/animation-engine/examples/: basic.html  easing-demo.html  easing_demo.py  particle_demo.py  queue-demo.html  skeletal_animation.py  ui_animation.py
projects/animation-engine/src/: animation.ts  easing.ts  engine.ts  index.ts  queue.ts  tween.ts  types.ts  utils.ts
projects/animation-engine/tests/: __init__.py  animation.test.ts  easing.test.ts  engine.test.ts  queue.test.ts  test_easing.py  test_engine.py  test_keyframe.py  test_particle.py  test_queue.py  test_skeleton.py  test_tween.py  test_types.py  tween.test.ts  utils.test.ts
projects/audio-engine/: CMakeLists.txt  LEARNING_NOTES.md  README.md
projects/audio-engine/docs/: 01-RESEARCH.md  01_RESEARCH.md  02-DESIGN.md  02_REQUIREMENTS.md  03-IMPLEMENTATION.md  03_DESIGN.md  04-TESTING.md  04_PRODUCT.md  05-DEVELOPMENT.md  05_DEVELOPMENT.md
projects/audio-engine/examples/: audio_effects.py  audio_filtering.py  basic_fft.py  mixing_denoising.py
projects/audio-engine/include/: audio_engine.h
projects/audio-engine/src/: __init__.py  audio_signal.py  denoiser.py  effects.py  equalizer.py  fft.py  filters.py  mixer.py
projects/audio-engine/tests/: test_audio_signal.py  test_denoiser.py  test_effects.py  test_equalizer.py  test_fft.py  test_filters.py  test_mixer.py
projects/av-codec/: CMakeLists.txt  INSTALL.md  LEARNING_NOTES.md  README.md  build.sh
projects/av-codec/docs/: 01-RESEARCH.md  01_RESEARCH.md  02-DESIGN.md  02_REQUIREMENTS.md  03-IMPLEMENTATION.md  03_DESIGN.md  04-TESTING.md  04_PRODUCT.md  05-DEVELOPMENT.md  05_DEVELOPMENT.md
projects/av-codec/include/: codec_types.h  (+7 more)
projects/bezier-engine/: Cargo.toml  LEARNING_NOTES.md  README.md
projects/color-space-engine/: Cargo.toml  LEARNING_NOTES.md  README.md
projects/constraint-solver/: CMakeLists.txt  LEARNING_NOTES.md  README.md
projects/cpp-coding-standards/: CMakeLists.txt  README.md
projects/cpp-compile-time-computation/: CMakeLists.txt  README.md
projects/cpp-memory-model-concurrency/: 01_RESEARCH.md  02_REQUIREMENTS.md  03_DESIGN.md  04_PRODUCT.md  05_DEVELOPMENT.md  CMakeLists.txt  README.md
projects/cpp-performance-optimization/: 01_RESEARCH.md  02_REQUIREMENTS.md  03_DESIGN.md  04_PRODUCT.md  05_DEVELOPMENT.md  CMakeLists.txt  README.md
projects/cpp-pitfalls-best-practices/: 01_RESEARCH.md  02_REQUIREMENTS.md  03_DESIGN.md  04_PRODUCT.md  05_DEVELOPMENT.md  CMakeLists.txt  README.md
projects/cpp-template-metaprogramming/: 01_RESEARCH.md  02_REQUIREMENTS.md  03_DESIGN.md  04_PRODUCT.md  05_DEVELOPMENT.md  CMakeLists.txt  README.md
projects/cpp-template-metaprogramming-advanced/: CMakeLists.txt  README.md
projects/cpp-third-party-libraries/: 01_RESEARCH.md  02_REQUIREMENTS.md  03_DESIGN.md  04_PRODUCT.md  05_DEVELOPMENT.md  CMakeLists.txt  README.md
projects/cpp-tricks-and-tips/: 01_RESEARCH.md  02_REQUIREMENTS.md  03_DESIGN.md  04_PRODUCT.md  05_DEVELOPMENT.md  CMakeLists.txt  README.md
projects/cpp11-14-features/: CMakeLists.txt  LEARNING_NOTES.md  README.md  build.sh  main.cpp  run.sh
projects/cpp17-features/: 01_RESEARCH.md  02_REQUIREMENTS.md  03_DESIGN.md  04_PRODUCT.md  05_DEVELOPMENT.md  CMakeLists.txt  README.md  any_example.cpp  apply_example.cpp  attributes_example.cpp  auto_extensions.cpp  ctad_example.cpp  filesystem_example.cpp  fold_expressions.cpp  gcd_lcm_example.cpp  if_constexpr_example.cpp  inline_variables.cpp  invoke_example.cpp  nested_namespaces.cpp  optional_example.cpp  parallel_algorithms.cpp  scoped_lock_example.cpp  shared_mutex_example.cpp  string_view_example.cpp  structured_bindings.cpp  variant_example.cpp
projects/cpp20-features/: 01_RESEARCH.md  02_REQUIREMENTS.md  03_DESIGN.md  04_PRODUCT.md  05_DEVELOPMENT.md  CMakeLists.txt  README.md
projects/cpp23-features/: 01_RESEARCH.md  02_REQUIREMENTS.md  03_DESIGN.md  04_PRODUCT.md  05_DEVELOPMENT.md  CMakeLists.txt  README.md
projects/crypto-lib/: .gitignore  Cargo.toml  LEARNING_NOTES.md  README.md  requirements.txt  setup.py
projects/disaster-recovery-storage/: .gitignore  CMakeLists.txt  LEARNING_NOTES.md  README.md  build.sh
projects/dns-server/: CMakeLists.txt  LEARNING_NOTES.md  README.md  go.mod
projects/gpu-shader-library/: 01_RESEARCH.md  02_REQUIREMENTS.md  03_DESIGN.md  04_PRODUCT.md  05_DEVELOPMENT.md  CMakeLists.txt  README.md
projects/ha-server/: CMakeLists.txt  LEARNING_NOTES.md  README.md
projects/heterogeneous-computing/: CMakeLists.txt  LEARNING_NOTES.md  README.md
projects/hft-engine/: 01_RESEARCH.md  02_REQUIREMENTS.md  03_DESIGN.md  04_PRODUCT.md  05_DEVELOPMENT.md  CMakeLists.txt  README.md
projects/high-concurrency-db/: CMakeLists.txt  LEARNING_NOTES.md  README.md  build.sh
projects/high-throughput-message-queue/: Cargo.toml  LEARNING_NOTES.md  README.md  go.mod
projects/http2-server/: CMakeLists.txt  LEARNING_NOTES.md  README.md  go.mod
(+6553 files in other folders)
