[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "animation-engine"
version = "1.0.0"
description = "A comprehensive Python animation engine with keyframe, tween, skeletal, and particle animations"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Animation Engine Team"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
